--- a/connectinggenderdive.ipynb
+++ b/connectinggenderdive.ipynb
@@ -2000,7 +2000,7 @@
    "id": "7d1b16bf",
    "metadata": {},
    "source": [
-    "## Part #3: Comparing salaries by gender, how do they compare in the US? Which are the lowest and highest salaries captured in the survey? Which countries have the lowest and highest average salaries by gender"
+    "## Part #3: Comparing salaries by gender, how do they compare in the US? Which are the lowest and highest salaries captured in the survey? Which countries have the lowest and highest average salaries by gender?"
    ]
   },
   {
