--- a/connectinggenderdive.ipynb
+++ b/connectinggenderdive.ipynb
@@ -368,7 +368,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_19972\\2894384611.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_21104\\2894384611.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -409,7 +409,7 @@
     }
    ],
    "source": [
-    "#get total responses with gender\n",
+    "#get total responses with gender provided\n",
     "df_gender.shape"
    ]
   },
@@ -423,7 +423,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_19972\\2825064158.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_21104\\2825064158.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2229,7 +2229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_19972\\1715049788.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_21104\\1715049788.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df_sal_cntry_max_min=df_sal_cntry_max_min.append(df_salary_country.groupby('Country')['Salary'].max().sort_values(ascending=False).to_frame().head())\n"
      ]
     },
@@ -2374,7 +2374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_19972\\3517700588.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "C:\\Users\\ANAY006\\AppData\\Local\\Temp\\ipykernel_21104\\3517700588.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  df_salary_country.loc[df_salary_country['Country'] == 'United States'].groupby(['Gender']).mean()\n"
      ]
     },
